# flask-react

./: .gitignore  LICENSE  README.md
client/: .env  package.json
client/src/: App.tsx
server/: .flaskenv  .gitignore  pyproject.toml
server/server/: app.py
server/server.egg-info/: PKG-INFO  SOURCES.txt
