[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Andrew Hyndman <ajhyndman@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.13.0"
black = "^19.10b0"
pylint = "^2.5.2"
flake8 = "^3.8.0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
