[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Andrew Hyndman <ajhyndman@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
